--- a/style.css
+++ b/style.css
@@ -2,33 +2,27 @@ body{
 	font-family: arial, san-sarif;
 	padding: 0;
 	margin: 0;
+        color: white;
+	text-align: center
 	background-image: url('new/cross.jpg');
 	font-size: 19px;
-	color: white;
-	text-align: center;
 	position: relative;
 		background-position: center;
 		background-size: cover;
 		background-repeat: no-repeat;
 		background-attachment: fixed;
 
-}
-
-body {
 	margin-left: 20px; 
 	margin-right: 20px;
 }
 header{
 	
 	background-color: #ffc594;
-	color: #ffff;
+	color: #fff;
 	padding-top: 5px;
 	min-height: 40px;
 	text-align: center;
 	
-	
-
-
 
 }
 
