--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
 body{
-	font-family: arial, san-sarif;
-	padding: 0;
-	margin: 0;
+	font-family: arial, san-sarif
         color: white;
-	text-align: center
+	text-align: center;
 	background-image: url('new/cross.jpg');
 	font-size: 19px;
 	position: relative;
@@ -11,8 +9,7 @@ body{
 		background-size: cover;
 		background-repeat: no-repeat;
 		background-attachment: fixed;
-
-	margin-left: 20px; 
+        margin-left: 20px; 
 	margin-right: 20px;
 }
 header{
@@ -38,10 +35,10 @@ footer a{
 	text-decoration: none;
 	color: #fff;
 }
-
+/*
 .sec{
-	min-height: 550px;
-	background-image: url('new/cross.jpg');
+	
+	background-image: url('new/john.jpg');
 	
 
 		position: relative;
@@ -51,7 +48,7 @@ footer a{
 		background-attachment: fixed;
 
 }
-
+*/
 .img{
 	width:100%;
 	 
