--- a/style.css
+++ b/style.css
@@ -35,10 +35,10 @@ footer a{
 	text-decoration: none;
 	color: #fff;
 }
-/*
+
 .sec{
 	
-	background-image: url('new/john.jpg');
+	background-image: url('new/cross.jpg');
 	
 
 		position: relative;
@@ -48,7 +48,6 @@ footer a{
 		background-attachment: fixed;
 
 }
-*/
 .img{
 	width:100%;
 	 
